# models/user.py
@@ -1,5 +1,6 @@
 from db_app import db
 from werkzeug.security import generate_password_hash, check_password_hash
+import json
 
 
 class UserModel(db.Model):
@@ -11,19 +12,36 @@ class UserModel(db.Model):
     password = db.Column(db.String(255), nullable=False)
     id_role = db.Column(db.Integer, nullable=False)
 
-    def get_user_by_email(self, email):
-        user = db.users.find_one({"email": email, "active": True})
-        if not user:
-            return
-        user["_id"] = str(user["_id"])
-        return user
+    def __init__(self, email=None, password=None, id_role=None):
+        self.token = None
+
+        if email is not None:
+            self.email = email
+        if password is not None:
+            self.password = password
+        if id_role is not None:
+            self.id_role = id_role
+
+    @property
+    def serialize(self):
+        """Return object data in a serializable format."""
+        return {
+            'id': self.id,
+            'email': self.email,
+            'id_role': self.id_role,
+            'token': getattr(self, 'token', None),
+        }
+
+    @classmethod
+    def get_user_by_email(cls, email):
+        return cls.query.filter_by(email=email).first()
+
+    def add_token(self, token):
+        self.token = token
 
     def login(self, email, password):
         user = self.get_user_by_email(email)
-        if not user or not check_password_hash(user["password"], password):
+        if not user or not check_password_hash(user.password, password):
             return
-        user.pop("password")
+        user.password = None
         return user
-
-    def __repr__(self):
-        return f'<User {self.email}>'
